--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,6 +295,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero p span {
   color: #ffffff;
   letter-spacing: 1px;
+  font-size: 60px;
 }
 
 #hero .social-links {
