--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,14 +305,14 @@ h1, h2, h3, h4, h5, h6 {
 #hero .social-links a {
   font-size: 54px;
   display: inline-block;
-  color: #ebebe0;
+  color: #ffffff;
   line-height: 1;
   margin-right: 20px;
   transition: 0.3s;
 }
 
 #hero .social-links a:hover {
-  color: #b3d1ff;
+  color: #ff9999;
 }
 
 @media (max-width: 992px) {
